made changes to settings

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,5 @@ SIGNING_KEY=your-jwt-signing-key
 STATIC_URL=/static/
 STATIC_ROOT=staticfiles
 MEDIA_URL=/media/
+
+SECRET_KEY =  'django-insecure-ssml2qw0g9h$po3l&5jh9mgh037wu2%z0!=hl0q3fi(_lmf8o*'
